--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@react-three/cannon": "^6.3.0",
     "@react-three/drei": "^9.14.3",
     "@react-three/fiber": "^8.0.27",
+    "@react-three/postprocessing": "^2.19.1",
+    "maath": "^0.10.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
